contrast fix

--- a/wwr/tech/techstyles.css
+++ b/wwr/tech/techstyles.css
@@ -224,7 +224,9 @@ footer .social img {
 
 .text {
     font-weight: 900;
+    font-size: 30px;
     color: yellow;
+    margin-top: 100px;
 }
 
 
